Publish Persistance API+Javadoc to local m2 repository (#10222)